expected/main/gens/primIncIx-pos-b-32.err
ERROR: "actual/main/gens/primIncIx-pos-b-32.lc", line 5
external incIx7   {primIncIx 7}   :: Ix 7   -> Maybe (Ix 7)
         ^
No generated implementation: Bitdata representations ("b" pass) required

ERROR: "actual/main/gens/primIncIx-pos-b-32.lc", line 6
external incIx32  {primIncIx 32}  :: Ix 32  -> Maybe (Ix 32)
         ^
No generated implementation: Bitdata representations ("b" pass) required

ERROR: Aborting after 2 previously reported errors

